...
                                </constraints>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y0x-ch-j5s">
                                <rect key="frame" x="16" y="274" width="343" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                </connections>
                            </view>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Urk-nz-gJ2">
                                <rect key="frame" x="16" y="236" width="343" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <constraint firstAttribute="height" constant="80" id="p3U-Xb-UUa"/>
                                </constraints>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3AN-I7-mE
                                                    <rect key="frame" x="8" y="73" width="84" height="19.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="School Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l4D-gB-RT4">
                                <rect key="frame" x="16" y="130" width="343" height="50"/>
                                <constraints>
...
                                <rect key="frame" x="0.0" y="605" width="375" height="61.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Take Picture!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gj8-Id-J9p">
                                        <rect key="frame" x="8" y="17" width="359" height="27.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
...
        <scene sceneID="gVi-y3-CNT">
            <objects>
                <viewController title="Face Customization" id="RKc-vf-uOU" customClass="FaceCustomizationViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="qHl-Bu-53z"/>
...
