...
    
//    return true;
}

- (IBAction)updateButtonText:(id)sender {
    UITextField *field = (UITextField *)sender;
    self.nextButtonLabel.text = field.tag == password ? @"Submit" : @"Next";
}

@end

